fixed style spacing and highlighting, added initial links

--- a/style.css
+++ b/style.css
@@ -1,27 +1,29 @@
 /* Universal Selector - will apply to all elements */
 * {
-    margin: 0;
-    padding: 0;
+    background: transparent;
     border: 0;
-    outline: 0;
     font-size: 100%;
     line-height: 1.3;
+    margin: 0;
+    outline: 0;
+    padding: 0;
     text-align: left;
     vertical-align: baseline;
-    background: transparent;
-}
-
+  }
 
 /* Element Selectors */
-a {
-    color: #36C;
-    text-decoration: none;
+body {
+    font: normal 0.9em/1.5em Arial, Helvetica, sans-serif;
+    overflow: auto;
+    text-align: center;
 }
 
 span {
     background: #EEE;
     display: inline-block;
-}
+    padding-left: 3px; 
+    padding-right: 3px;
+  }
 
 span:hover,
 span:hover * {
@@ -29,20 +31,13 @@ span:hover * {
     color: white;
 } /* affects span and any element inside span */
 
+span a { background: #EEE; }
 
-
-/* Class Selectors - Fonts */
-.bold { font-weight: bold; }
-.title { 
-    background: #36C; 
-    color: white; 
-    font-weight: bold;
+a {
+    color: #36C;
+    text-decoration: none;
 }
 
-
-/* Class Selectors - Spacing */
-.spacer { clear: both; line-height: 1; }
-.one { width: 252px; padding-left: 3px; padding-right: 3px; }
 
 
 /* Class Selectors - Columns */
@@ -52,12 +47,41 @@ span:hover * {
     float: left;
     margin-left: 6px;
     padding: 0px;
-    width: 260px;
+    width: 258px;
 }
 
-.col span {
-    border-bottom: solid 1px grey;
+.col span { border-bottom: solid 1px grey; }
+.col span * { border-bottom: none;}
+
+.row { display: flex; }
+
+
+
+/* Class Selectors - Spacing */
+.spacer { clear: both; line-height: 1; }
+.roomy { margin-top: 10px; }
+.one { width: 252px; }
+.threefourths { width: 129px; } /* approximate */
+.twothirds { width: 172px; }
+.third { width: 86px; border-bottom: solid 0px transparent;}
+.half { width: 129px; }
+.fourth { width: 64px; } /* approximate */
+
+
+/* Class Selectors - Fonts */
+.bold { font-weight: bold; }
+.title { 
+    background: #36C; 
+    border: solid 1px black;    
+    color: white; 
+    font-weight: bold;
+    margin-bottom: 3px;
+    width: 252px;
 }
+.textcenter { text-align: center; }
+.textleft { text-align: left; }
+.textright { text-align: right; }
+
 
 
 /* ID Selectors */
@@ -75,7 +99,7 @@ span:hover * {
     color: white;
     font-size: 2.5em;
     font-weight: bold;
-    height: 50px;
+    height: 46px;
     width: 800px;
 }
 
